[gd_scene load_steps=10 format=3 uid="uid://06ssqf6s4ng5"]

[ext_resource type="PackedScene" uid="uid://dyv8w1cafsw4o" path="res://enemies/lowpoly_orc.glb" id="1_gqp87"]
[ext_resource type="Script" path="res://enemies/orc.gd" id="2_xnyh7"]
[ext_resource type="PackedScene" uid="uid://bianxt3i2i24p" path="res://utils/health_bar_3d.tscn" id="3_mryj0"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_menut"]
radius = 0.77613
height = 5.61141

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0jnla"]
radius = 1.16
height = 4.19

[sub_resource type="AudioStreamWAV" id="AudioStreamWAV_tiguj"]

[sub_resource type="AudioStreamWAV" id="AudioStreamWAV_eeyx0"]
stereo = true

[sub_resource type="BoxShape3D" id="BoxShape3D_a1olc"]
size = Vector3(8, 1, 8)

[sub_resource type="ViewportTexture" id="ViewportTexture_fbs5u"]
viewport_path = NodePath("SubViewport")

[node name="lowpoly_orc2" groups=["enemy"] instance=ExtResource("1_gqp87")]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0)
script = ExtResource("2_xnyh7")

[node name="Skeleton3D" parent="Armature" index="0"]
bones/0/position = Vector3(-0.00289181, 1.78331, 0.0123771)
bones/0/rotation = Quaternion(9.04403e-10, 0, -0.0206903, 0.999786)
bones/1/position = Vector3(-0.0263245, 1.07982, -0.407491)
bones/1/rotation = Quaternion(0.958137, -0.0474649, -0.01397, -0.282003)
bones/1/scale = Vector3(1, 1, 0.999999)
bones/2/rotation = Quaternion(-0.298034, 0.125084, -0.685755, 0.652127)
bones/3/rotation = Quaternion(0.132119, 0.0143553, -0.0392253, 0.990354)
bones/3/scale = Vector3(1, 1, 1)
bones/4/rotation = Quaternion(-0.234776, -0.0281617, 0.0537184, 0.970156)
bones/5/rotation = Quaternion(-0.557054, 0.299491, -0.143199, 0.761242)
bones/5/scale = Vector3(1, 1, 1)
bones/6/rotation = Quaternion(-0.464485, 0.0546742, -0.157031, 0.869831)
bones/7/rotation = Quaternion(0.297116, -0.0113791, 0.197527, 0.934118)
bones/8/rotation = Quaternion(0.962007, 0.222992, -0.156569, -0.0174321)
bones/8/scale = Vector3(1, 1, 1)
bones/9/rotation = Quaternion(0.0381854, -0.00178769, 0.287579, 0.956994)
bones/9/scale = Vector3(1, 1, 1)
bones/10/rotation = Quaternion(-0.0468599, 0.150776, -0.69954, 0.696932)
bones/12/scale = Vector3(1, 1, 1)
bones/13/scale = Vector3(1, 1, 1)
bones/14/position = Vector3(0.0866112, 1.06439, 0.407477)
bones/14/rotation = Quaternion(0.645058, 0.743152, 0.0344486, 0.174465)
bones/14/scale = Vector3(1, 1, 0.999999)
bones/15/rotation = Quaternion(0.75411, 0.369186, -0.517737, 0.164221)
bones/16/rotation = Quaternion(-0.0458158, -0.530747, 0.043665, 0.845164)
bones/16/scale = Vector3(1, 1, 1)
bones/17/rotation = Quaternion(-0.428218, -0.347883, 0.0995842, 0.828064)
bones/18/rotation = Quaternion(0.257223, 0.0249649, -0.0330898, 0.965463)
bones/19/rotation = Quaternion(0.617159, 0.585067, -0.421379, 0.31504)
bones/19/scale = Vector3(0.354739, 0.354739, 0.354739)
bones/20/rotation = Quaternion(-0.0109995, -0.816496, 0.0358495, 0.576132)
bones/21/rotation = Quaternion(-0.193676, 0.361917, 0.17662, 0.894601)
bones/22/rotation = Quaternion(0.983932, 0.105862, 0.142149, 0.0215755)
bones/22/scale = Vector3(1, 1, 1)
bones/23/rotation = Quaternion(-0.0449862, -0.00601696, 0.356454, 0.93321)
bones/24/rotation = Quaternion(0.190633, 0.102983, -0.754949, 0.618955)
bones/25/rotation = Quaternion(0.493389, 0.50526, -0.495023, 0.506193)
bones/25/scale = Vector3(1, 1, 1)
bones/26/position = Vector3(0.802788, 1.01138, -0.49575)
bones/27/position = Vector3(0.201138, 0.10507, -0.302756)
bones/27/rotation = Quaternion(0.707445, -0.706133, -0.0211968, -0.0211575)
bones/27/scale = Vector3(1, 1, 1)
bones/28/position = Vector3(0.800935, 1.00805, 0.533972)
bones/29/position = Vector3(-0.311512, 0.153079, 0.265568)
bones/29/rotation = Quaternion(-0.0831237, -0.0572803, 0.673923, 0.731873)
bones/29/scale = Vector3(1, 1, 1)

[node name="shortsword" parent="Armature/Skeleton3D" index="0"]
transform = Transform3D(0.0271532, -0.32988, 0.127598, 0.0110136, -0.127123, -0.330996, 0.353527, 0.0292971, 0.000511378, 0.220348, 3.37308, 0.460933)

[node name="Hitbox" type="Area3D" parent="Armature/Skeleton3D/shortsword/shortsword" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Armature/Skeleton3D/shortsword/shortsword/Hitbox" index="0"]
transform = Transform3D(1, 1.39698e-09, 6.51926e-09, -1.58325e-08, 1, 5.96046e-08, 1.86265e-09, -1.19209e-07, 1, 0.0146123, 1.56587, 0.0415885)
shape = SubResource("CapsuleShape3D_menut")

[node name="AnimationPlayer" parent="." index="1"]
autoplay = "idle"

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.05198, -0.0381881)
shape = SubResource("CapsuleShape3D_0jnla")

[node name="FootstepAudioPlayer" type="AudioStreamPlayer3D" parent="." index="3"]
stream = SubResource("AudioStreamWAV_tiguj")
volume_db = -10.0
unit_size = 1.44
max_db = -5.0

[node name="AttackAudioPlayer" type="AudioStreamPlayer3D" parent="." index="4"]
stream = SubResource("AudioStreamWAV_eeyx0")
volume_db = -16.762
max_db = -4.143

[node name="HurtAudioPlayer" type="AudioStreamPlayer3D" parent="." index="5"]
stream = SubResource("AudioStreamWAV_eeyx0")
volume_db = -23.619
max_db = -7.143

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." index="6"]
path_height_offset = 0.5

[node name="DetectionZone" type="Area3D" parent="." index="7"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionZone" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.487041, 0)
shape = SubResource("BoxShape3D_a1olc")

[node name="SubViewport" type="SubViewport" parent="." index="8"]
disable_3d = true
transparent_bg = true

[node name="EnemyHealthBar" parent="SubViewport" index="0" instance=ExtResource("3_mryj0")]

[node name="Sprite3D" type="Sprite3D" parent="." index="9"]
transform = Transform3D(0.146825, 0, 0, 0, 0.286372, 0, 0, 0, 1, 0, 3.9865, 0)
billboard = 1
texture = SubResource("ViewportTexture_fbs5u")

[connection signal="body_entered" from="Armature/Skeleton3D/shortsword/shortsword/Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="DetectionZone" to="." method="_on_detection_zone_body_entered"]
[connection signal="body_exited" from="DetectionZone" to="." method="_on_detection_zone_body_exited"]
